# or1kmvp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: Findor1kiss.cmake  Findvcml.cmake
config/: smp2.cfg  smp4.cfg  up.cfg
include/or1kmvp/: common.h  config.h  openrisc.h  processor.h  system.h
scripts/: or1kmvp-net
src/: main.cpp
src/or1kmvp/: openrisc.cpp  processor.cpp  system.cpp
sw/: or1kmvp-smp2.dtb  or1kmvp-smp4.dtb  or1kmvp-up.dtb
test/: CMakeLists.txt  linux_boot.exp
utils/: CMakeLists.txt
